use assets from CDN

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,5 @@
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
 body {
-    background-color: dimgrey;
+  background: url('../img/background.png');
 }
 
 .btn {
