--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,26 @@ h2, a, a:link, a:hover, a:visited, a:active, a:focus {
   text-decoration: none;
 }
 
-
 .pipeline-badge {
   margin: 1px;
   padding: 0px;
-  display: block;
-  width: 100%;
   border-radius: 5px;
-  text-align: center;
+}
+
+.multistage-state {
+  white-space:nowrap;
+}
+
+.dot {
+  background: #000000;
+  width: 20px;
+  height: 20px;
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 50%;
+  border-color: white;
+  margin: 11px 0 0 3px;
+  display: inline-block;
 }
 
 .build-passed { background-color: darkgreen;}
