--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -2,3 +2,7 @@
   max-width: none;
   white-space: nowrap;
 }
+
+.table-condensed>thead>tr>th, .table-condensed>tbody>tr>th, .table-condensed>tfoot>tr>th, .table-condensed>thead>tr>td, .table-condensed>tbody>tr>td, .table-condensed>tfoot>tr>td{
+    padding: 2px;
+}
